--- a/.github/workflows/pushToDockerHub.yaml
+++ b/.github/workflows/pushToDockerHub.yaml
@@ -1,6 +1,9 @@
 name: Push to Docker Hub
 
-on: push
+on:
+  push:
+    branches: ["main", "feature/github-action-runner"]
+    pull_request: ["main"]
 
 jobs:
   push_to_docker_hub:
